[package]
name = "rustfuzz"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
console-subscriber = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ldap3 = "0.11.5"
quick-xml = "0.37.2"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
xmltree = "0.11.0"
libxslt = "0.1.2"
libxml = "0.3.3"
